--- a/skin/frontend/gs-default/default/css/styles.css
+++ b/skin/frontend/gs-default/default/css/styles.css
@@ -1294,6 +1294,9 @@ ul.dbrands li .desc_bname a:hover {
 	right:0px;
 	top:0px;
 }
+.acctn_personal .error-msg span{
+    position:relative;
+}
 .acctn_personal input[type="text"],.acctn_personal input[type="password"]{
 	padding:4px;
 	border:1px solid #bcbcbc;
