--- a/app/design/frontend/gs-default/default/template/customer/account/dashboard/hello.phtml
+++ b/app/design/frontend/gs-default/default/template/customer/account/dashboard/hello.phtml
@@ -1,3 +1,3 @@
  <h3>Welcome...</h3>
 <p><?php echo $this->htmlEscape($this->getCustomerName()) ?></p>
-<span><?php echo $this->__('Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.');?></span>
+<span><?php echo $this->__('This is your space to track your order status, current and historical, as well as viewing your wish list and keeping us up to date on your personal details.');?></span>
