--- a/app/design/frontend/gs-default/default/template/persistent/customer/form/login.phtml
+++ b/app/design/frontend/gs-default/default/template/persistent/customer/form/login.phtml
@@ -26,7 +26,7 @@ div.btn_block button{ cursor:pointer;}
                   </td>
                 </tr>
                 <tr>
-                  <td><a href="#" class="forgot_pword"><?php echo $this->__('Forgotten your password') ?></a></td>
+                  <td><a href="<?php echo $this->getForgotPasswordUrl();?>" class="forgot_pword"><?php echo $this->__('Forgotten your password') ?></a></td>
                 </tr>
                 <tr>
                   <td><div class="rad_8 btn_block">
