new chnges for forgot passwod and registration cntent

--- a/app/design/frontend/gs-default/default/template/customer/form/login.phtml
+++ b/app/design/frontend/gs-default/default/template/customer/form/login.phtml
@@ -14,7 +14,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td><a href="#" class="forgot_pword"><?php echo $this->__('Forgotten your password') ?></a></td>
+                  <td><a href="<?php echo $this->getForgotPasswordUrl();?>" class="forgot_pword"><?php echo $this->__('Forgotten your password') ?></a></td>
                 </tr>
                 <tr>
                   <td><div class="rad_8 btn_block">
