Added GeoTrust seal

--- a/app/design/frontend/gs-default/default/template/checkout/cart.phtml
+++ b/app/design/frontend/gs-default/default/template/checkout/cart.phtml
@@ -92,7 +92,16 @@
 		
 		
 		<div class="logos_merchant">
-			<div class="fleft"><img alt="" src="<?php echo $this->getSkinUrl('images/logos_merch_1.jpg') ?>"> <img alt="" src="<?php echo $this->getSkinUrl('images/logos_merch_2.jpg') ?>"></div>
+			<div class="fleft">
+				<!--<img alt="" src="<?php echo $this->getSkinUrl('images/logos_merch_1.jpg') ?>">--> 
+				<!-- webbot  bot="HTMLMarkup" startspan --> 
+				<!-- GeoTrust QuickSSL [tm] Smart  Icon tag. Do not edit. -->
+				<SCRIPT LANGUAGE="JavaScript"  TYPE="text/javascript"  
+				SRC="//smarticon.geotrust.com/si.js"></SCRIPT>
+				<!-- end  GeoTrust Smart Icon tag --> 
+				<!-- webbot  bot="HTMLMarkup" endspan -->
+				<img alt="" src="<?php echo $this->getSkinUrl('images/logos_merch_2.jpg') ?>">
+			</div>
 			<div class="fright">
 			
 			
