- compatibility with php5+

--- a/app/design/frontend/gs-default/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/gs-default/default/template/catalog/product/view.phtml
@@ -136,7 +136,7 @@
             </div>
             <?php
                 $helper = Mage::helper('cms');
-                $processor =& $helper->getPageTemplateProcessor();
+                $processor = $helper->getPageTemplateProcessor();
             ?>
 			<!-- Size Guide and Delivery Returns Begins-->
 			<div id="size-guide-delivery-returns">
