removed unnecessary field lalbel

--- a/app/design/frontend/gs-default/default/template/customer/form/register.phtml
+++ b/app/design/frontend/gs-default/default/template/customer/form/register.phtml
@@ -128,7 +128,7 @@ div.btn_block button{ cursor:pointer;}
 				</div>
 			<?php endif; ?>
                 <tr>
-                  <td><label><?php echo $this->__('Password*:')?><ins><?php echo __('Password must be at least 6 characters');?></ins></label>
+                  <td><label><?php echo $this->__('Password*:')?></label>
                    <input type="password" name="password" id="password" title="<?php echo $this->__('Password') ?>" class="input-text required-entry validate-password" /></td>
                 </tr>
                 <tr>
