changes font color  for privacy policy

--- a/skin/frontend/gs-default/default/css/styles.css
+++ b/skin/frontend/gs-default/default/css/styles.css
@@ -1227,7 +1227,7 @@ ul.dbrands li .desc_bname a:hover {
 .account_content .ppolicy{
 	float:left;
 	font-size:9px;
-	color:#cccccc;
+	color:#cccc;
 	width:300px;
 	line-height:1.4em;
 }
