--- a/app/locale/en_US/template/email/sales/order_new_guest.html
+++ b/app/locale/en_US/template/email/sales/order_new_guest.html
@@ -42,7 +42,7 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
             </tr>
             <tr>
                 <td>
-                    <h2 style="font-size:18px; font-weight:normal; margin:0;">Your Order #{{var order.increment_id}} <small>(placed on {{var order.getCreatedAtFormated('long')}})</small></h2>
+                    <h2 style="font-size:18px; font-weight:normal; margin:0;">Your Order #{{var order.increment_id}} <small>(placed on {{var order.getCreatedAtFormated('long',true)}})</small></h2>
                 </td>
             </tr>
             <tr>
